--- a/Views/Contacts/Create.cshtml
+++ b/Views/Contacts/Create.cshtml
@@ -62,11 +62,11 @@
                 <input type="file" asp-for="ImageFile" class="form-control" />
                 <span asp-validation-for="ImageData" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="Created" class="control-label"></label>
                 <input asp-for="Created" class="form-control" />
                 <span asp-validation-for="Created" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
