Add about info and improve look a little

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="https://github.com/JoyfulReaper/MVCAddressBook" target="_blank">GitHub</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="https://kgivler.com" target="_blank">About</a>
+                        </li>
                     </ul>
                 </div>
             </div>
