--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,45 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Address Book: A project by Kyle Givler";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container col-xxl-8">
+    <div class="row g-5 py-5 row-cols-1 row-cols-lg-2">
+        <div class="col order-last order-lg-first">
+            <h1 class="display-5 fw-bold lh-1 mb-3">MVC Address Book</h1>
+            <h4 class="lead">
+                This C# MVC example is a simple address book. Built using C#/ASP.NET MVC, HTML5, Bootstrap 4, Entity Framework and SQL Server.
+            </h4>
+            <ul class="fa-ul pt-2 checklist">
+                <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS and Bootstrap Layout</li>
+                <li><span class="fa-li"><i class="fas fa-check-square"></i></span>C# Fundementals</li>
+                <li><span class="fa-li"><i class="fas fa-check-square"></i></span>C# ASP.NET MVC</li>
+                <li><span class="fa-li"><i class="fas fa-check-square"></i></span>C# Objects/Methods</li>
+                <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Entity Framework Core</li>
+                <li><span class="fa-li"><i class="fas fa-check-square"></i></span>SQL Server Database</li>
+            </ul>
+            <div>
+                <a type="button" class="btn btn-outline-dark btn-lg px-4 me-md-2" asp-area="" asp-controller="Contacts" asp-action="Index">Try It Out</a>
+            </div>
+
+            <h5 class="fw-bold mt-5">
+                <div class="d-flex">
+                    <div class="row">
+                        <div class="col"><i class="fab fa-bootstrap fa-3x bsicon"></i></div>
+                        <div class="col"><i class="fab fa-html5 fa-3x html5icon"></i></div>
+                        <div class="col"><i class="fab fa-css3-alt fa-3x cssicon"></i></div>
+                    </div>
+                </div>
+            </h5>
+        </div>
+
+        <!-- Logo Section -->
+        <div class="col d-flex align-content-center">
+            <img src="~/img/book-rings-1240203-640x480.jpg" class="img-fluid center-block d-block mx-auto" alt="App Logo" width="700" height="500">
+        </div>
+    </div>
 </div>
+
+@section scripts {
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/5db21ba9c6.js" crossorigin="anonymous"></script>
+}
