--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="container col-xxl-8">
     <div class="row g-5 py-5 row-cols-1 row-cols-lg-2">
-        <div class="col order-last order-lg-first">
+        <div class="col-12 col-sm-6 order-last order-lg-first">
             <h1 class="display-5 fw-bold lh-1 mb-3">MVC Address Book</h1>
             <h4 class="lead">
                 This C# MVC example is a simple address book. Built using C#/ASP.NET MVC, HTML5, Bootstrap 4, Entity Framework and SQL Server.
@@ -33,7 +33,7 @@
         </div>
 
         <!-- Logo Section -->
-        <div class="col d-flex align-content-center">
+        <div class="col-12 col-sm-6 d-flex align-content-center">
             <img src="~/img/book-rings-1240203-640x480.jpg" class="img-fluid center-block d-block mx-auto" alt="App Logo" width="700" height="500">
         </div>
     </div>
